force-app/main/default/objects/kzItemScoring__c/kzItemScoring__c.object-meta.xml
<CustomObject>
    <description>Define un campo del Lead que participa en el scoring, su PMP, estado y pregunta para Agent.</description>
    <label>Item Scoring</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Scorings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>