force-app/main/default/objects/kzItemScoring__c/fields/kzActive__c.field-meta.xml
<CustomField>
    <fullName>kzActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Si está desmarcado, el motor de scoring ignorará este ítem.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>