force-app/main/default/objects/kzItemScoring__c/fields/kzDescription__c.field-meta.xml
<CustomField>
    <fullName>kzDescription__c</fullName>
    <inlineHelpText>Detalle del item.</inlineHelpText>
    <label>Descripción</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>