force-app/main/default/objects/kzItemScoring__c/fields/kzFieldType__c.field-meta.xml
<CustomField>
    <fullName>kzFieldType__c</fullName>
    <inlineHelpText>Tipo inferido o elegido; determina la lógica de matching.</inlineHelpText>
    <label>Tipo de Campo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>CHECKBOX</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>