force-app/main/default/objects/kzItemScoring__c/fields/kzLeadFieldApi__c.field-meta.xml
<CustomField>
    <fullName>kzLeadFieldApi__c</fullName>
    <inlineHelpText>API name del campo del objeto Lead (ej: Company, LeadSource). Seleccione desde el combobox en el LWC (no escribir manualmente).</inlineHelpText>
    <label>Nombre API del campo principal</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>