force-app/main/default/objects/kzItemScoring__c/fields/kzPMP__c.field-meta.xml
<CustomField>
    <fullName>kzPMP__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Puntaje máximo asignado a este campo. El PMP_Total será suma de estos PMP por items (si no hay override en Scoring).</inlineHelpText>
    <label>PMP</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>