force-app/main/default/objects/kzItemScoring__c/fields/kzQuestionAgent__c.field-meta.xml
<CustomField>
    <fullName>kzQuestionAgent__c</fullName>
    <inlineHelpText>Pregunta que el agente debe usar para obtener este dato del cliente.</inlineHelpText>
    <label>Pregunta Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>