force-app/main/default/objects/kzItemScoring__c/fields/kzScoring__c.field-meta.xml
<CustomField>
    <fullName>kzScoring__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Referencia al Scoring MAIN.</inlineHelpText>
    <label>Scoring</label>
    <referenceTo>kzScoring__c</referenceTo>
    <relationshipLabel>Item Scorings</relationshipLabel>
    <relationshipName>Item_Scorings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>